--- a/about.html
+++ b/about.html
@@ -513,93 +513,97 @@
 </div>
 <!-- Team End -->
     <!-- Footer Start -->
-    <footer class="text-white pt-5 pb-5" style="background-color:#0d3b2e;">
-      <div class="container mt-5 mb-5">
-        <div class="row">
+        <footer class="text-white pt-3 pb-3"
+          style="background-color:#0d3b2e;">
+          <div class="container mt-5">
+            <div class="row">
 
-          <!-- Our Office -->
-          <div class="col-md-4 mb-4">
-            <h5 class="fw-bold mb-4">Our Office</h5>
-            <p><i class="fa fa-map-marker-alt me-2"></i>123 Pimpri, Pune,
-              India</p>
-            <p><i class="fa fa-phone-alt me-2"></i>+91 87345 67890</p>
-            <p><i class="fa fa-envelope me-2"></i>info@themindgarden.com</p>
-            <div class="d-flex gap-2">
-              <a href="#"
-                class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="fab fa-twitter"></i></a>
-              <a href="#"
-                class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="fab fa-facebook-f"></i></a>
-              <a href="#"
-                class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="fab fa-youtube"></i></a>
-              <a href="#"
-                class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="fab fa-instagram"></i></a>
+              <!-- Our Office -->
+              <div class="col-md-4 mb-4">
+                <h5 class="fw-bold mb-4">Our Office</h5>
+                <p><i class="bi bi-geo-alt me-2"></i>123 Pimpri, Pune,
+                  India</p>
+                <p><i class="bi bi-telephone me-2"></i>+91 87345 67890</p>
+                <p><i
+                    class="bi bi-envelope me-2"></i>info@themindgarden.com</p>
+                <div class="d-flex gap-2">
+                  <a href="#"
+                    class="btn btn-outline-light btn-sm rounded-circle"><i
+                      class="bi bi-twitter"></i></a>
+                  <a href="#"
+                    class="btn btn-outline-light btn-sm rounded-circle"><i
+                      class="bi bi-facebook"></i></a>
+                  <a href="#"
+                    class="btn btn-outline-light btn-sm rounded-circle"><i
+                      class="bi bi-youtube"></i></a>
+                  <a href="#"
+                    class="btn btn-outline-light btn-sm rounded-circle"><i
+                      class="bi bi-instagram"></i></a>
+                </div>
+              </div>
+
+              <!-- Services -->
+              <div class="col-md-4 mb-4">
+                <h5 class="fw-bold mb-4">Services</h5>
+                <ul class="list-unstyled">
+                  <li><span class="text-success">›</span> <a href="services.html"
+                      class="text-white text-decoration-none">Landscaping</a></li>
+                  <li><span class="text-success">›</span> <a href="services.html"
+                      class="text-white text-decoration-none">Pruning
+                      Plants</a></li>
+                  <li><span class="text-success">›</span> <a href="services.html"
+                      class="text-white text-decoration-none">Irrigation &
+                      Drainage</a></li>
+                  <li><span class="text-success">›</span> <a href="services.html"
+                      class="text-white text-decoration-none">Garden
+                      Maintenance</a></li>
+                  <li><span class="text-success">›</span> <a href="services.html"
+                      class="text-white text-decoration-none">Green
+                      Technology</a></li>
+                  <li><span class="text-success">›</span> <a href="services.html"
+                      class="text-white text-decoration-none">Urban
+                      Gardening
+                    </a></li>
+                </ul>
+              </div>
+
+              <!-- Quick Links -->
+              <div class="col-md-4 mb-4">
+                <h5 class="fw-bold mb-4">Quick Links</h5>
+                <ul class="list-unstyled">
+                  <li><span class="text-success">›</span> <a href="#"
+                      class="text-white text-decoration-none">About</a></li>
+                  <li><span class="text-success">›</span> <a href="#"
+                      class="text-white text-decoration-none">Services</a></li>
+                  <li><span class="text-success">›</span> <a href="#"
+                      class="text-white text-decoration-none">Projects
+                    </a></li>
+                  <li><span class="text-success">›</span> <a href="#"
+                      class="text-white text-decoration-none">Features</a></li>
+                  <li><span class="text-success">›</span> <a href="#"
+                      class="text-white text-decoration-none">Feedback
+                      Form</a></li>
+                  <li><span class="text-success">›</span> <a href="#"
+                      class="text-white text-decoration-none">Contact
+                      US</a></li>
+                </ul>
+              </div>
+
             </div>
           </div>
 
-          <!-- Services -->
-          <div class="col-md-4 mb-4">
-            <h5 class="fw-bold mb-4">Services</h5>
-            <ul class="list-unstyled">
-              <li><span class="text-success">›</span> <a href="#"
-                  class="text-white text-decoration-none">Landscaping</a></li>
-              <li><span class="text-success">›</span> <a href="#"
-                  class="text-white text-decoration-none">Pruning
-                  Plants</a></li>
-              <li><span class="text-success">›</span> <a href="#"
-                  class="text-white text-decoration-none">Irrigation &
-                  Drainage</a></li>
-              <li><span class="text-success">›</span> <a href="#"
-                  class="text-white text-decoration-none">Garden
-                  Maintenance</a></li>
-              <li><span class="text-success">›</span> <a href="#"
-                  class="text-white text-decoration-none">Green
-                  Technology</a></li>
-              <li><span class="text-success">›</span> <a href="#"
-                  class="text-white text-decoration-none">Urban
-                  Gardening</a></li>
-            </ul>
+          <!-- Bottom -->
+          <div class="py-3" style="background-color:#092b21;">
+            <div
+              class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
+              <small>© The-Mind-Garden, All Right Reserved.</small>
+              <small>Designed By <a href="#"
+                  class="text-success text-decoration-none">MAAD
+                  GROUP</a></small>
+            </div>
           </div>
-
-          <!-- Quick Links -->
-          <div class="col-md-4 mb-4">
-            <h5 class="fw-bold mb-4">Quick Links</h5>
-            <ul class="list-unstyled">
-              <li><span class="text-success">›</span> <a href="about.html"
-                  class="text-white text-decoration-none">About</a></li>
-              <li><span class="text-success">›</span> <a href="services.html"
-                  class="text-white text-decoration-none">Services</a></li>
-              <li><span class="text-success">›</span> <a href="projects.html"
-                  class="text-white text-decoration-none">Projects</a></li>
-              <li><span class="text-success">›</span> <a href="features.html"
-                  class="text-white text-decoration-none">Features</a></li>
-              <li><span class="text-success">›</span> <a href="ourteam.html"
-                  class="text-white text-decoration-none">Our Team</a></li>
-              <li><span class="text-success">›</span> <a href="feedback.html"
-                  class="text-white text-decoration-none">Feedback Form</a></li>
-              <li><span class="text-success">›</span> <a href="reviews.html"
-                  class="text-white text-decoration-none">Reviews</a></li>
-              <li><span class="text-success">›</span> <a href="contact.html"
-                  class="text-white text-decoration-none">Contact US</a></li>
-            </ul>
-          </div>
-
-        </div>
-      </div>
-
-      <!-- Bottom -->
-      <div class="py-3" style="background-color:#092b21;">
-        <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
-          <small>© The-Mind-Garden, All Right Reserved.</small>
-          <small>Designed By <a href="#"
-              class="text-success text-decoration-none">MAAD GROUP</a></small>
-        </div>
-      </div>
-    </footer>
-    <!-- Footer End -->
+        </footer>
+        <!-- Footer End -->
 
     <script>
   document.addEventListener("DOMContentLoaded", () => {
