--- a/ourteam.html
+++ b/ourteam.html
@@ -431,17 +431,19 @@
           </div>
 
           <!-- Bottom -->
-          <div class="py-3" style="background-color:#092b21;">
-            <div
-              class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
-              <small>© The-Mind-Garden, All Right Reserved.</small>
-              <small>Designed By <a href="#"
-                  class="text-success text-decoration-none">MAAD
-                  GROUP</a></small>
-            </div>
-          </div>
-        </footer>
-        <!-- Footer End -->
+    <div class="py-3" style="background-color:#092b21;">
+       <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
+         <small>© <span id="year"></span> The-Mind-Garden, All Right Reserved.</small>
+           <small>Designed By <a href="#" class="text-success text-decoration-none">MAAD GROUP</a></small>
+       </div>
+   </div>
+ </footer>
+    <!-- Footer End -->
+<!-- Script to insert current year -->
+   <script>
+     const now = new Date();
+       document.getElementById("year").textContent = now.getFullYear();
+   </script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
