--- a/index.html
+++ b/index.html
@@ -15,61 +15,56 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
 
-      /* Default (Large Screens) */
-.slider-h {
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 80px;
-  line-height: 1.2;
-  margin-top: 0;
-}
-
-/* For Laptops and Desktops (Below 1200px) */
-@media (max-width: 1200px) {
+/* Default styles for larger screens */
   .slider-h {
-    font-size: 60px;
+    font-size: 4rem; 
+    line-height: 1.2;
+    text-align: center;
   }
-}
 
-/* For Tablets (Below 992px) */
-@media (max-width: 992px) {
-  .slider-h {
-    font-size: 50px;
+  .carousel-caption .btn {
+    padding: 12px 30px;
+    font-size: 1.2rem; 
   }
-  .carousel-caption a.btn {
-    padding: 12px 28px;
-    font-size: 16px;
-  }
-}
 
-/* For Small Tablets & Large Mobiles (Below 768px) */
-@media (max-width: 768px) {
-  .slider-h {
-    font-size: 40px;
-  }
-  .carousel-caption {
-    bottom: 50px; /* Move content up */
-    padding: 0 10px;
-  }
-  .carousel-caption a.btn {
-    padding: 10px 22px;
-    font-size: 14px;
-  }
-}
+  /* Medium devices (tablets, 768px and below) */
+  @media (max-width: 768px) {
+    .slider-h {
+      font-size: 2rem; 
+      margin-bottom: 20px;
+    }
 
-/* For Mobile Phones (Below 576px) */
-@media (max-width: 576px) {
-  .slider-h {
-    font-size: 40px;
+    .carousel-caption .btn {
+      padding: 10px 25px;
+      font-size: 1rem; 
+    }
   }
-  .carousel-caption {
-    bottom: 40px;
-    padding: 0 8px;
+
+  /* Small devices (phones, 576px and below) */
+  @media (max-width: 576px) {
+    .slider-h {
+      font-size: 1.5rem; 
+      margin-bottom: 15px;
+    }
+
+    .carousel-caption .btn {
+      padding: 8px 20px;
+      font-size: 0.9rem; 
+    }
   }
-  .carousel-caption a.btn {
-    padding: 8px 18px;
-    font-size: 13px;
+
+  /* Extra small devices (phones, 400px and below) */
+  @media (max-width: 400px) {
+    .slider-h {
+      font-size: 1.2rem; 
+      margin-bottom: 10px;
+    }
+
+    .carousel-caption .btn {
+      padding: 6px 18px;
+      font-size: 0.8rem; 
+    }
   }
-}
 
 
     .carousel-item {
@@ -454,7 +449,7 @@
           <!-- Slide 1 -->
           <div class="carousel-item active" data-bs-interval="10000">
             <img src="images/baner2.jpg" alt="Gardener Banner" class="w-100"
-              style="height:600px; object-fit:cover;">
+              style="height: auto; max-height: 600px; object-fit: cover;">
             <div class="overlay"></div>
             <div
               class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
@@ -467,7 +462,7 @@
           <!-- Slide 2 -->
           <div class="carousel-item" data-bs-interval="2000">
             <img src="images/baner1.jpg" alt="Gardener Banner" class="w-100"
-              style="height:600px; object-fit:cover;">
+              style="height: auto; max-height: 600px; object-fit: cover;">
             <div class="overlay"></div>
             <div
               class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
