--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,8 @@
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-2 shadow-sm">
         <div class="container-fluid">
-          <a class="navbar-brand fw-bold fs-1 text-success"
-            href="index.html">Gardener</a>
+          <a class="navbar-brand fw-bold fs-1 text-success col-md-2"
+            href="index.html"><img src="images/logo-png.png" class="img-fluid" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarNav" aria-controls="navbarNav"
             aria-expanded="false">
@@ -111,7 +111,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-4">
-              <li class="nav-item"><a class="nav-link active fs-5 link-success"
+              <li class="nav-item"><a 
+                  class="nav-link fs-5 link-dark link-success-hover"
                   href="index.html">Home</a></li>
               <li class="nav-item"><a
                   class="nav-link fs-5 link-dark link-success-hover"
@@ -138,7 +139,7 @@
                 </ul>
               </li>
               <li class="nav-item"><a
-                  class="nav-link fs-5 link-dark link-success-hover"
+                  class="nav-link fs-5 link-success active "
                   href="contact.html">Contact</a></li>
             </ul>
           </div>
