--- a/features.html
+++ b/features.html
@@ -117,7 +117,8 @@
         class="navbar navbar-expand-lg navbar-light bg-white py-2 shadow-sm ">
         <div class="container-fluid">
           <!-- Logo -->
-          <a class="navbar-brand fw-bold fs-1 text-success" href="#">Navbar</a>
+          <a class="navbar-brand fw-bold fs-1 text-success col-md-2"
+            href="index.html"><img src="images/logo-png.png" class="img-fluid" alt=""></a>
 
           <!-- Toggler for mobile -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -131,7 +132,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-4">
               <li class="nav-item">
-                <a class="nav-link active fs-5 link-success"
+                <a class="nav-link active fs-5 link-dark link-success-hover"
                   aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
@@ -148,7 +149,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle fs-5 link-dark link-success-hover"
+                  class="nav-link dropdown-toggle fs-5 link-success"
                   href="#" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
                   Pages
