--- a/projects.html
+++ b/projects.html
@@ -152,6 +152,7 @@
       }
     </style>
   </head>
+
   <body>
     <!-- Top Bar -->
     <div class="text-white py-3" style="background-color:#0b3d2e;">
@@ -172,19 +173,19 @@
     </div>
 
     <!-- Header Start -->
-    <header>
+    <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-2 shadow-sm">
         <div class="container-fluid">
-          <a class="navbar-brand fw-bold fs-1 text-success" href="index.html">
-            Navbar
-          </a>
+          <a class="navbar-brand fw-bold fs-1 text-success col-md-2"
+            href="index.html"><img src="images/logo-png.png" class="img-fluid" alt=""></a>
+        
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-4">
-              <li class="nav-item"><a class="nav-link active fs-5 link-success"
+              <li class="nav-item"><a class="nav-link active fs-5 link-dark link-success-hover "
                   href="index.html">Home</a></li>
               <li class="nav-item"><a
                   class="nav-link fs-5 link-dark link-success-hover"
@@ -193,7 +194,7 @@
                   class="nav-link fs-5 link-dark link-success-hover"
                   href="services.html">Services</a></li>
               <li class="nav-item"><a
-                  class="nav-link fs-5 link-dark link-success-hover"
+                  class="nav-link fs-5 link-success"
                   href="projects.html">Projects</a></li>
               <li class="nav-item dropdown">
                 <a
@@ -272,8 +273,15 @@
                 <div class="project-overlay">
                   <h4 class="project-title">Landscaping</h4>
                   <div class="project-buttons">
-                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                      <a href="#" class="btn-icon view-btn"
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img="images/service-1.jpg"
+                      data-alt="Landscaping">
+                      <i class="bi bi-eye"></i>
+                      </a>
                     <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
+                  
                   </div>
                 </div>
               </div>
@@ -286,7 +294,13 @@
                 <div class="project-overlay">
                   <h4 class="project-title">Pruning Plants</h4>
                   <div class="project-buttons">
-                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                    <a href="#" class="btn-icon view-btn"
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img="images/service-2.jpg"
+                      data-alt="Landscaping">
+                      <i class="bi bi-eye"></i>
+                      </a>
                     <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
@@ -300,7 +314,13 @@
                 <div class="project-overlay">
                   <h4 class="project-title">Irrigation & Drainage</h4>
                   <div class="project-buttons">
-                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                   <a href="#" class="btn-icon view-btn"
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img="images/service-3.jpg"
+                      data-alt="Landscaping">
+                      <i class="bi bi-eye"></i>
+                      </a>
                     <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
@@ -314,7 +334,13 @@
                 <div class="project-overlay">
                   <h4 class="project-title">Garden Maintenance</h4>
                   <div class="project-buttons">
-                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                    <a href="#" class="btn-icon view-btn"
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img="images/service-4.jpg"
+                      data-alt="Landscaping">
+                      <i class="bi bi-eye"></i>
+                      </a>
                     <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
@@ -328,7 +354,13 @@
                 <div class="project-overlay">
                   <h4 class="project-title">Green Technology</h4>
                   <div class="project-buttons">
-                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                    <a href="#" class="btn-icon view-btn"
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img="images/service-5.jpg"
+                      data-alt="Landscaping">
+                      <i class="bi bi-eye"></i>
+                      </a>
                     <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
@@ -342,7 +374,13 @@
                 <div class="project-overlay">
                   <h4 class="project-title">Urban Gardening</h4>
                   <div class="project-buttons">
-                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                    <a href="#" class="btn-icon view-btn"
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img="images/service-6.jpg"
+                      data-alt="Landscaping">
+                      <i class="bi bi-eye"></i>
+                      </a>
                     <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
@@ -361,7 +399,13 @@
                 <div class="project-overlay">
                   <h4 class="project-title">Landscaping</h4>
                   <div class="project-buttons">
-                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                   <a href="#" class="btn-icon view-btn"
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img="images/service-1.jpg"
+                      data-alt="Landscaping">
+                      <i class="bi bi-eye"></i>
+                      </a>
                     <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
@@ -375,7 +419,13 @@
                 <div class="project-overlay">
                   <h4 class="project-title">Irrigation & Drainage</h4>
                   <div class="project-buttons">
-                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                   <a href="#" class="btn-icon view-btn"
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img="images/service-3.jpg"
+                      data-alt="Landscaping">
+                      <i class="bi bi-eye"></i>
+                      </a>
                     <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
@@ -389,7 +439,13 @@
                 <div class="project-overlay">
                   <h4 class="project-title">Green Technology</h4>
                   <div class="project-buttons">
-                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                     <a href="#" class="btn-icon view-btn"
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img="images/service-5.jpg"
+                      data-alt="Landscaping">
+                      <i class="bi bi-eye"></i>
+                      </a>
                     <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
@@ -408,7 +464,13 @@
                 <div class="project-overlay">
                   <h4 class="project-title">Pruning Plants</h4>
                   <div class="project-buttons">
-                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                     <a href="#" class="btn-icon view-btn"
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img="images/service-2.jpg"
+                      data-alt="Landscaping">
+                      <i class="bi bi-eye"></i>
+                      </a>
                     <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
@@ -422,7 +484,13 @@
                 <div class="project-overlay">
                   <h4 class="project-title">Garden Maintenance</h4>
                   <div class="project-buttons">
-                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                    <a href="#" class="btn-icon view-btn"
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img="images/service-4.jpg"
+                      data-alt="Landscaping">
+                      <i class="bi bi-eye"></i>
+                      </a>
                     <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
@@ -436,7 +504,13 @@
                 <div class="project-overlay">
                   <h4 class="project-title">Urban Gardening</h4>
                   <div class="project-buttons">
-                    <a href="#" class="btn-icon"><i class="bi bi-eye"></i></a>
+                     <a href="#" class="btn-icon view-btn"
+                      data-bs-toggle="modal"
+                      data-bs-target="#imageModal"
+                      data-img="images/service-6.jpg"
+                      data-alt="Landscaping">
+                      <i class="bi bi-eye"></i>
+                      </a>
                     <a href="#" class="btn-icon"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
@@ -448,73 +522,132 @@
       </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="text-white pt-5 pb-5 prj-footer">
-      <div class="container mt-5 mb-5">
+    <!-- Footer Start -->
+    <footer class="text-white pt-3 pb-3 mt-5"
+      style="background-color:#0d3b2e;">
+      <div class="container mt-5">
         <div class="row">
+
+          <!-- Our Office -->
           <div class="col-md-4 mb-4">
             <h5 class="fw-bold mb-4">Our Office</h5>
-            <p><i class="fa fa-map-marker-alt me-2"></i>123 Pimpri, Pune,
+            <p><i class="bi bi-geo-alt me-2"></i>123 Pimpri, Pune,
               India</p>
-            <p><i class="fa fa-phone-alt me-2"></i>+91 87345 67890</p>
-            <p><i class="fa fa-envelope me-2"></i>info@themindgarden.com</p>
+            <p><i class="bi bi-telephone me-2"></i>+91 87345 67890</p>
+            <p><i
+                class="bi bi-envelope me-2"></i>info@themindgarden.com</p>
             <div class="d-flex gap-2">
-              <a href="#" class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="fab fa-twitter"></i></a>
-              <a href="#" class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="fab fa-facebook-f"></i></a>
-              <a href="#" class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="fab fa-youtube"></i></a>
-              <a href="#" class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="fab fa-instagram"></i></a>
+              <a href="#"
+                class="btn btn-outline-light btn-sm rounded-circle"><i
+                  class="bi bi-twitter"></i></a>
+              <a href="#"
+                class="btn btn-outline-light btn-sm rounded-circle"><i
+                  class="bi bi-facebook"></i></a>
+              <a href="#"
+                class="btn btn-outline-light btn-sm rounded-circle"><i
+                  class="bi bi-youtube"></i></a>
+              <a href="#"
+                class="btn btn-outline-light btn-sm rounded-circle"><i
+                  class="bi bi-instagram"></i></a>
             </div>
           </div>
+
+          <!-- Services -->
           <div class="col-md-4 mb-4">
             <h5 class="fw-bold mb-4">Services</h5>
             <ul class="list-unstyled">
-              <li><span class="text-success">›</span> Landscaping</li>
-              <li><span class="text-success">›</span> Pruning Plants</li>
-              <li><span class="text-success">›</span> Irrigation & Drainage</li>
-              <li><span class="text-success">›</span> Garden Maintenance</li>
-              <li><span class="text-success">›</span> Green Technology</li>
-              <li><span class="text-success">›</span> Urban Gardening</li>
+              <li><span class="text-success">›</span> <a href="services.html"
+                  class="text-white text-decoration-none">Landscaping</a></li>
+              <li><span class="text-success">›</span> <a href="services.html"
+                  class="text-white text-decoration-none">Pruning
+                  Plants</a></li>
+              <li><span class="text-success">›</span> <a href="services.html"
+                  class="text-white text-decoration-none">Irrigation &
+                  Drainage</a></li>
+              <li><span class="text-success">›</span> <a href="services.html"
+                  class="text-white text-decoration-none">Garden
+                  Maintenance</a></li>
+              <li><span class="text-success">›</span> <a href="services.html"
+                  class="text-white text-decoration-none">Green
+                  Technology</a></li>
+              <li><span class="text-success">›</span> <a href="services.html"
+                  class="text-white text-decoration-none">Urban
+                  Gardening
+                </a></li>
             </ul>
           </div>
+
+          <!-- Quick Links -->
           <div class="col-md-4 mb-4">
             <h5 class="fw-bold mb-4">Quick Links</h5>
             <ul class="list-unstyled">
-              <li><span class="text-success">›</span> <a href="about.html"
-                  class="text-white">About</a></li>
-              <li><span class="text-success">›</span> <a href="services.html"
-                  class="text-white">Services</a></li>
-              <li><span class="text-success">›</span> <a href="projects.html"
-                  class="text-white">Projects</a></li>
-              <li><span class="text-success">›</span> <a href="features.html"
-                  class="text-white">Features</a></li>
-              <li><span class="text-success">›</span> <a href="ourteam.html"
-                  class="text-white">Our Team</a></li>
-              <li><span class="text-success">›</span> <a href="feedback.html"
-                  class="text-white">Feedback</a></li>
-              <li><span class="text-success">›</span> <a href="reviews.html"
-                  class="text-white">Reviews</a></li>
-              <li><span class="text-success">›</span> <a href="contact.html"
-                  class="text-white">Contact</a></li>
+              <li><span class="text-success">›</span> <a href="#"
+                  class="text-white text-decoration-none">About</a></li>
+              <li><span class="text-success">›</span> <a href="#"
+                  class="text-white text-decoration-none">Services</a></li>
+              <li><span class="text-success">›</span> <a href="#"
+                  class="text-white text-decoration-none">Projects
+                </a></li>
+              <li><span class="text-success">›</span> <a href="#"
+                  class="text-white text-decoration-none">Features</a></li>
+              <li><span class="text-success">›</span> <a href="#"
+                  class="text-white text-decoration-none">Feedback
+                  Form</a></li>
+              <li><span class="text-success">›</span> <a href="#"
+                  class="text-white text-decoration-none">Contact
+                  US</a></li>
             </ul>
           </div>
-        </div>
-      </div>
-      <div class="py-3 prj-footer-bottom">
-        <div
-          class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
-          <small>© The-Mind-Garden, All Right Reserved.</small>
-          <small>Designed By <a href="#" class="text-success">MAAD
-              GROUP</a></small>
-        </div>
-      </div>
-    </footer>
 
-    <!-- Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+        </div>
+      </div>
+
+       <!-- Bottom -->
+    <div class="py-3" style="background-color:#092b21;">
+       <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
+         <small>© <span id="year"></span> The-Mind-Garden, All Right Reserved.</small>
+           <small>Designed By <a href="#" class="text-success text-decoration-none">MAAD GROUP</a></small>
+       </div>
+   </div>
+ </footer>
+    <!-- Footer End -->
+<!-- Script to insert current year -->
+   <script>
+     const now = new Date();
+       document.getElementById("year").textContent = now.getFullYear();
+   </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"></script>
+
+      <!-- Image Modal -->
+<div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content bg-dark">
+      <button type="button" class="btn-close btn-close-white ms-auto me-2 mt-2"
+              data-bs-dismiss="modal" aria-label="Close"></button>
+      <div class="modal-body p-0">
+        <img id="modalImg" src="" alt="" class="w-100 h-auto d-block">
+      </div>
+      <div class="modal-footer border-0 text-secondary">
+        <span id="modalCaption"></span>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  document.querySelectorAll('.btn-icon.view-btn').forEach(btn => {
+    btn.addEventListener('click', () => {
+      const imgSrc = btn.getAttribute('data-img');
+      const altTxt = btn.getAttribute('data-alt') || '';
+      document.getElementById('modalImg').src = imgSrc;
+      document.getElementById('modalImg').alt = altTxt;
+      document.getElementById('modalCaption').textContent = altTxt;
+    });
+  });
+</script>
+
   </body>
 </html>
