--- a/services.html
+++ b/services.html
@@ -183,10 +183,12 @@
       </div>
     </div>
 
-    <header>
+    <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-2 shadow-sm">
         <div class="container-fluid">
-          <a class="navbar-brand fw-bold fs-1 text-success" href="#">Navbar</a>
+          <a class="navbar-brand fw-bold fs-1 text-success col-md-2"
+            href="index.html"><img src="images/logo-png.png" class="img-fluid" alt=""></a>
+        
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -195,10 +197,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-4">
               <li class="nav-item">
-                <a class="nav-link active fs-5 link-success" href="index.html">Home</a>
+                <a class="nav-link active fs-5 link-dark link-success-hover " href="index.html">Home</a>
               </li>
               <li class="nav-item"><a class="nav-link fs-5 link-dark link-success-hover" href="about.html">About</a></li>
-              <li class="nav-item"><a class="nav-link fs-5 link-dark link-success-hover" href="services.html">Services</a></li>
+              <li class="nav-item"><a class="nav-link fs-5 link-success" href="services.html">Services</a></li>
               <li class="nav-item"><a class="nav-link fs-5 link-dark link-success-hover" href="projects.html">Projects</a></li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle fs-5 link-dark link-success-hover" href="#" role="button" data-bs-toggle="dropdown">Pages</a>
@@ -491,18 +493,20 @@
         </div>
       </div>
 
-      <!-- Bottom -->
-      <div class="py-3" style="background-color:#092b21;">
-        <div
-          class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
-          <small>© The-Mind-Garden, All Right Reserved.</small>
-          <small>Designed By <a href="#"
-              class="text-success text-decoration-none">MAAD
-              GROUP</a></small>
-        </div>
-      </div>
-    </footer>
+       <!-- Bottom -->
+    <div class="py-3" style="background-color:#092b21;">
+       <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
+         <small>© <span id="year"></span> The-Mind-Garden, All Right Reserved.</small>
+           <small>Designed By <a href="#" class="text-success text-decoration-none">MAAD GROUP</a></small>
+       </div>
+   </div>
+ </footer>
     <!-- Footer End -->
+<!-- Script to insert current year -->
+   <script>
+     const now = new Date();
+       document.getElementById("year").textContent = now.getFullYear();
+   </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
