--- a/feedback.html
+++ b/feedback.html
@@ -74,11 +74,12 @@
       </div>
     </div>
     <!-- Header Start -->
-    <header>
+    <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-2 shadow-sm">
         <div class="container-fluid">
           <!-- Logo -->
-          <a class="navbar-brand fw-bold fs-1 text-success" href="#">Navbar</a>
+         <a class="navbar-brand fw-bold fs-1 text-success col-md-2"
+            href="index.html"><img src="images/logo-png.png" class="img-fluid" alt=""></a>
 
           <!-- Toggler for mobile -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -92,7 +93,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-4">
               <li class="nav-item">
-                <a class="nav-link active fs-5 link-success"
+                <a class="nav-link active fs-5 link-dark link-success-hover"
                   aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
@@ -109,7 +110,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle fs-5 link-dark link-success-hover"
+                  class="nav-link dropdown-toggle fs-5 link-success"
                   href="#" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
                   Pages
@@ -283,18 +284,20 @@
             </div>
           </div>
 
-          <!-- Bottom -->
-          <div class="py-3" style="background-color:#092b21;">
-            <div
-              class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
-              <small>© The-Mind-Garden, All Right Reserved.</small>
-              <small>Designed By <a href="#"
-                  class="text-success text-decoration-none">MAAD
-                  GROUP</a></small>
-            </div>
-          </div>
-        </footer>
-        <!-- Footer End -->
+             <!-- Bottom -->
+    <div class="py-3" style="background-color:#092b21;">
+       <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
+         <small>© <span id="year"></span> The-Mind-Garden, All Right Reserved.</small>
+           <small>Designed By <a href="#" class="text-success text-decoration-none">MAAD GROUP</a></small>
+       </div>
+   </div>
+ </footer>
+    <!-- Footer End -->
+<!-- Script to insert current year -->
+   <script>
+     const now = new Date();
+       document.getElementById("year").textContent = now.getFullYear();
+   </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
