--- a/projects.html
+++ b/projects.html
@@ -150,6 +150,41 @@
         background-color: #198754;
         color: #fff;
       }
+
+      #imageModal .modal-dialog {
+  max-width: 420px;  /* Slightly larger than image */
+  margin: 1.75rem auto;
+}
+
+#imageModal .modal-content {
+  width: 100%;
+  height: 420px; /* Set fixed height */
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  border-radius: 8px;
+}
+
+#imageModal .modal-body {
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#modalImg {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  display: block;
+}
+
+
+      
     </style>
   </head>
 
@@ -622,16 +657,15 @@
       crossorigin="anonymous"></script>
 
       <!-- Image Modal -->
-<div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true" >
   <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content bg-dark">
-      <button type="button" class="btn-close btn-close-white ms-auto me-2 mt-2"
+      <button type="button" class="btn-close btn-close-white ms-auto "
               data-bs-dismiss="modal" aria-label="Close"></button>
       <div class="modal-body p-0">
         <img id="modalImg" src="" alt="" class="w-100 h-auto d-block">
       </div>
-      <div class="modal-footer border-0 text-secondary">
-        <span id="modalCaption"></span>
+      
       </div>
     </div>
   </div>
