--- a/ourteam.html
+++ b/ourteam.html
@@ -203,11 +203,12 @@
       </div>
     </div>
     <!-- Header Start -->
-    <header>
+    <header class="sticky-top bg-light">
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-2 shadow-sm">
         <div class="container-fluid">
           <!-- Logo -->
-          <a class="navbar-brand fw-bold fs-1 text-success" href="#">Navbar</a>
+           <a class="navbar-brand fw-bold fs-1 text-success col-md-2"
+            href="index.html"><img src="images/logo-png.png" class="img-fluid" alt="LOGO"></a>
 
           <!-- Toggler for mobile -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -221,24 +222,21 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-4">
               <li class="nav-item">
-                <a class="nav-link active fs-5 link-success"
+                <a class="nav-link active fs-5 link-dark link-success-hover"
                   aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5 link-dark link-success-hover"
-                  href="about.html">About</a>
+                <a class="nav-link fs-5 link-dark link-success-hover" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5 link-dark link-success-hover"
-                  href="services.html">Services</a>
+                <a class="nav-link fs-5 link-dark link-success-hover" href="services.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5 link-dark link-success-hover"
-                  href="projects.html">Projects</a>
+                <a class="nav-link fs-5 link-dark link-success-hover" href="projects.html">Projects</a>
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle fs-5 link-dark link-success-hover"
+                  class="nav-link dropdown-toggle fs-5 link-success"
                   href="#" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
                   Pages
@@ -246,17 +244,13 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item"
                       href="features.html">Features</a></li>
-                  <li><a class="dropdown-item" href="ourteam.html">Our
-                      Team</a></li>
-                  <li><a class="dropdown-item" href="feedback.html">Feedback
-                      Form</a></li>
-                  <li><a class="dropdown-item"
-                      href="reviews.html">Reviews</a></li>
+                  <li><a class="dropdown-item" href="ourteam.html">Our Team</a></li>
+                  <li><a class="dropdown-item" href="feedback.html">Feedback Form</a></li>
+                  <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5 link-dark link-success-hover"
-                  href="contact.html">Contact</a>
+                <a class="nav-link fs-5 link-dark link-success-hover" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
