--- a/services.html
+++ b/services.html
@@ -16,6 +16,25 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <style>
+
+      /* Logo Styling */
+    .logo {
+    max-width: 300px;
+    height: auto;
+}
+
+/* Adjust logo size on smaller screens */
+  @media (max-width: 768px) {
+  .logo {
+    max-width: 200px;
+  }
+ }
+
+@media (max-width: 576px) {
+  .logo {
+    max-width: 150px;
+  }
+}
     .link-success-hover:hover {
       color: #198754 !important;
     }
@@ -173,13 +192,14 @@
           <span class="ms-4"><i class="bi bi-envelope me-2"></i>
             info@themindgarden.com</span>
         </div>
-        <div>
-          <span class="me-2">Follow Us:</span>
-          <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
-          <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="text-white me-3"><i class="bi bi-youtube"></i></a>
-          <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
-        </div>
+        <!-- Right side: social icons -->
+<div>
+  <span class="me-2">Follow Us:</span>
+  <a href="https://twitter.com" target="_blank" class="text-white me-3"><i class="bi bi-twitter"></i></a>
+  <a href="https://facebook.com" target="_blank" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+  <a href="https://youtube.com" target="_blank" class="text-white me-3"><i class="bi bi-youtube"></i></a>
+  <a href="https://instagram.com" target="_blank" class="text-white"><i class="bi bi-instagram"></i></a>
+</div>
       </div>
     </div>
 
@@ -187,7 +207,7 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-2 shadow-sm">
         <div class="container-fluid">
           <a class="navbar-brand fw-bold fs-1 text-success col-md-2"
-            href="index.html"><img src="images/logo-png.png" class="img-fluid" alt=""></a>
+            href="index.html"><img src="images/logo-png.png" class="logo img-fluid" alt=""></a>
         
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -225,8 +245,7 @@
           <h1 class="display-3 text-white mb-4 fw-bold">Services</h1>
           <nav aria-label="breadcrumb" class="animated slideInDown">
             <ul class="breadcrumb justify-content-center mb-0">
-              <li class="breadcrumb-item"><a href="#" class="text-white text-decoration-none">Home</a></li>
-              <li class="breadcrumb-item"><a href="#" class="text-white text-decoration-none">Pages</a></li>
+              <li class="breadcrumb-item"><a href="index.html" class="text-white text-decoration-none">Home</a></li>
               <li class="breadcrumb-item text-white active" aria-current="page">Services</li>
             </ul>
           </nav>
@@ -427,20 +446,12 @@
             <p><i class="bi bi-telephone me-2"></i>+91 87345 67890</p>
             <p><i
                 class="bi bi-envelope me-2"></i>info@themindgarden.com</p>
-            <div class="d-flex gap-2">
-              <a href="#"
-                class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="bi bi-twitter"></i></a>
-              <a href="#"
-                class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="bi bi-facebook"></i></a>
-              <a href="#"
-                class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="bi bi-youtube"></i></a>
-              <a href="#"
-                class="btn btn-outline-light btn-sm rounded-circle"><i
-                  class="bi bi-instagram"></i></a>
-            </div>
+          <div class="d-flex gap-2">
+                  <a href="https://twitter.com" target="_blank" class="text-white me-3"><i class="bi bi-twitter"></i></a>
+                  <a href="https://facebook.com" target="_blank" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+                  <a href="https://youtube.com" target="_blank" class="text-white me-3"><i class="bi bi-youtube"></i></a>
+                  <a href="https://instagram.com" target="_blank" class="text-white"><i class="bi bi-instagram"></i></a>
+               </div>
           </div>
 
           <!-- Services -->
