--- a/feedback.html
+++ b/feedback.html
@@ -83,14 +83,14 @@
             info@themindgarden.com</span>
         </div>
 
-        <!-- Right side: social icons -->
-        <div>
-          <span class="me-2">Follow Us:</span>
-          <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
-          <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="text-white me-3"><i class="bi bi-youtube"></i></a>
-          <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
-        </div>
+               <!-- Right side: social icons -->
+<div>
+  <span class="me-2">Follow Us:</span>
+  <a href="https://twitter.com" target="_blank" class="text-white me-3"><i class="bi bi-twitter"></i></a>
+  <a href="https://facebook.com" target="_blank" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+  <a href="https://youtube.com" target="_blank" class="text-white me-3"><i class="bi bi-youtube"></i></a>
+  <a href="https://instagram.com" target="_blank" class="text-white"><i class="bi bi-instagram"></i></a>
+</div>
       </div>
     </div>
     <!-- Header Start -->
@@ -254,19 +254,11 @@
                 <p><i
                     class="bi bi-envelope me-2"></i>info@themindgarden.com</p>
                 <div class="d-flex gap-2">
-                  <a href="#"
-                    class="btn btn-outline-light btn-sm rounded-circle"><i
-                      class="bi bi-twitter"></i></a>
-                  <a href="#"
-                    class="btn btn-outline-light btn-sm rounded-circle"><i
-                      class="bi bi-facebook"></i></a>
-                  <a href="#"
-                    class="btn btn-outline-light btn-sm rounded-circle"><i
-                      class="bi bi-youtube"></i></a>
-                  <a href="#"
-                    class="btn btn-outline-light btn-sm rounded-circle"><i
-                      class="bi bi-instagram"></i></a>
-                </div>
+                  <a href="https://twitter.com" target="_blank" class="text-white me-3"><i class="bi bi-twitter"></i></a>
+                  <a href="https://facebook.com" target="_blank" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+                  <a href="https://youtube.com" target="_blank" class="text-white me-3"><i class="bi bi-youtube"></i></a>
+                  <a href="https://instagram.com" target="_blank" class="text-white"><i class="bi bi-instagram"></i></a>
+               </div>
               </div>
 
               <!-- Services -->
