--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,26 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <style>
-      body {
-        font-family: Arial, sans-serif;
-      }
+     
+      /* Logo Styling */
+.logo {
+  max-width: 300px;
+  height: auto;
+}
+
+/* Adjust logo size on smaller screens */
+@media (max-width: 768px) {
+  .logo {
+    max-width: 200px;
+  }
+}
+
+@media (max-width: 576px) {
+  .logo {
+    max-width: 150px;
+  }
+}
+
 
       .link-success-hover:hover {
         color: #198754 !important;
@@ -88,22 +105,29 @@
           <span class="ms-4"><i class="bi bi-envelope me-2"></i>
             info@themindgarden.com</span>
         </div>
+        <!-- Right side: social icons -->
         <div>
           <span class="me-2">Follow Us:</span>
-          <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
-          <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="text-white me-3"><i class="bi bi-youtube"></i></a>
-          <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
+          <a href="https://twitter.com" target="_blank"
+            class="text-white me-3"><i class="bi bi-twitter"></i></a>
+          <a href="https://facebook.com" target="_blank"
+            class="text-white me-3"><i class="bi bi-facebook"></i></a>
+          <a href="https://youtube.com target="_blank"
+            class="text-white me-3"><i class="bi bi-youtube"></i></a>
+          <a href="https://instagram.com" target="_blank"
+            class="text-white"><i class="bi bi-instagram"></i></a>
         </div>
       </div>
     </div>
 
     <!-- Header -->
     <header class="sticky-top">
-      <nav class="navbar navbar-expand-lg navbar-light bg-white py-2 shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <div class="container-fluid">
           <a class="navbar-brand fw-bold fs-1 text-success col-md-2"
-            href="index.html"><img src="images/logo-png.png" class="img-fluid" alt=""></a>
+            href="index.html">
+            <img src="images/logo-png.png" class="logo img-fluid"
+              alt="The Mind Garden Logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarNav" aria-controls="navbarNav"
             aria-expanded="false">
@@ -111,7 +135,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-4">
-              <li class="nav-item"><a 
+              <li class="nav-item"><a
                   class="nav-link fs-5 link-dark link-success-hover"
                   href="index.html">Home</a></li>
               <li class="nav-item"><a
@@ -156,8 +180,6 @@
           <ul class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item"><a href="index.html"
                 class="text-white text-decoration-none">Home</a></li>
-            <li class="breadcrumb-item"><a href="#"
-                class="text-white text-decoration-none">Pages</a></li>
             <li class="breadcrumb-item text-white active"
               aria-current="page">Contact</li>
           </ul>
@@ -254,16 +276,16 @@
             <p><i
                 class="bi bi-envelope me-2"></i>info@themindgarden.com</p>
             <div class="d-flex gap-2">
-              <a href="#"
+              <a href="https://twitter.com"
                 class="btn btn-outline-light btn-sm rounded-circle"><i
                   class="bi bi-twitter"></i></a>
-              <a href="#"
+              <a href="https://facebook.com"
                 class="btn btn-outline-light btn-sm rounded-circle"><i
                   class="bi bi-facebook"></i></a>
-              <a href="#"
+              <a href="https://youtube.com"
                 class="btn btn-outline-light btn-sm rounded-circle"><i
                   class="bi bi-youtube"></i></a>
-              <a href="#"
+              <a href="https://instagram.com"
                 class="btn btn-outline-light btn-sm rounded-circle"><i
                   class="bi bi-instagram"></i></a>
             </div>
@@ -320,16 +342,19 @@
       </div>
 
       <!-- Bottom -->
-    <div class="py-3" style="background-color:#092b21;">
-       <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
-         <small>© <span id="year"></span> The-Mind-Garden, All Right Reserved.</small>
-           <small>Designed By <a href="#" class="text-success text-decoration-none">MAAD GROUP</a></small>
-       </div>
-   </div>
- </footer>
+      <div class="py-3" style="background-color:#092b21;">
+        <div
+          class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
+          <small>© <span id="year"></span> The-Mind-Garden, All Right
+            Reserved.</small>
+          <small>Designed By <a href="#"
+              class="text-success text-decoration-none">MAAD GROUP</a></small>
+        </div>
+      </div>
+    </footer>
     <!-- Footer End -->
-<!-- Script to insert current year -->
-   <script>
+    <!-- Script to insert current year -->
+    <script>
      const now = new Date();
        document.getElementById("year").textContent = now.getFullYear();
    </script>
