--- a/features.html
+++ b/features.html
@@ -21,6 +21,25 @@
         color: #198754 !important;
       }
 
+           /* Logo Styling */
+.logo {
+  max-width: 300px;
+  height: auto;
+}
+
+/* Adjust logo size on smaller screens */
+@media (max-width: 768px) {
+  .logo {
+    max-width: 200px;
+  }
+}
+
+@media (max-width: 576px) {
+  .logo {
+    max-width: 150px;
+  }
+}
+
       .page-header {
   position: relative;
   background: url('images/baner1.jpg') center center/cover no-repeat;
@@ -85,6 +104,32 @@
   z-index: 2;
 }
 
+ /*animation starts*/
+ 
+.page-header h1,
+.page-header nav {
+  opacity: 0;
+  transform: translateY(-30px);
+  animation: fadeSlideDown 1s ease-in-out forwards;
+}
+
+.page-header nav {
+  animation-delay: 0.5s; /* Starts after heading animation */
+}
+
+@keyframes fadeSlideDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+
 
 
     </style>
@@ -102,13 +147,13 @@
         </div>
 
         <!-- Right side: social icons -->
-        <div>
-          <span class="me-2">Follow Us:</span>
-          <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
-          <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="text-white me-3"><i class="bi bi-youtube"></i></a>
-          <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
-        </div>
+<div>
+  <span class="me-2">Follow Us:</span>
+  <a href="https://twitter.com" target="_blank" class="text-white me-3"><i class="bi bi-twitter"></i></a>
+  <a href="https://facebook.com" target="_blank" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+  <a href="https://youtube.com" target="_blank" class="text-white me-3"><i class="bi bi-youtube"></i></a>
+  <a href="https://instagram.com" target="_blank" class="text-white"><i class="bi bi-instagram"></i></a>
+</div>
       </div>
     </div>
     <!-- Header Start -->
@@ -117,8 +162,8 @@
         class="navbar navbar-expand-lg navbar-light bg-white py-2 shadow-sm ">
         <div class="container-fluid">
           <!-- Logo -->
-          <a class="navbar-brand fw-bold fs-1 text-success col-md-2"
-            href="index.html"><img src="images/logo-png.png" class="img-fluid" alt=""></a>
+          <a class="navbar-brand fw-bold fs-1 text-success col-md-2" href="index.html">
+  <img src="images/logo-png.png" class="logo img-fluid" alt="The Mind Garden Logo"></a>
 
           <!-- Toggler for mobile -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -390,19 +435,19 @@
               <p><i
                   class="bi bi-envelope me-2"></i>info@themindgarden.com</p>
               <div class="d-flex gap-2">
-                <a href="#"
-                  class="btn btn-outline-light btn-sm rounded-circle"><i
-                    class="bi bi-twitter"></i></a>
-                <a href="#"
-                  class="btn btn-outline-light btn-sm rounded-circle"><i
-                    class="bi bi-facebook"></i></a>
-                <a href="#"
-                  class="btn btn-outline-light btn-sm rounded-circle"><i
-                    class="bi bi-youtube"></i></a>
-                <a href="#"
-                  class="btn btn-outline-light btn-sm rounded-circle"><i
-                    class="bi bi-instagram"></i></a>
-              </div>
+              <a href="https://twitter.com"
+                class="btn btn-outline-light btn-sm rounded-circle"><i
+                  class="bi bi-twitter"></i></a>
+              <a href="https://facebook.com"
+                class="btn btn-outline-light btn-sm rounded-circle"><i
+                  class="bi bi-facebook"></i></a>
+              <a href="https://youtube.com"
+                class="btn btn-outline-light btn-sm rounded-circle"><i
+                  class="bi bi-youtube"></i></a>
+              <a href="https://instagram.com"
+                class="btn btn-outline-light btn-sm rounded-circle"><i
+                  class="bi bi-instagram"></i></a>
+            </div>
             </div>
 
             <!-- Services -->
