--- a/services.html
+++ b/services.html
@@ -216,7 +216,14 @@
           <i class="bi bi-telephone me-2"></i> +91 87345 67890
           <span class="ms-4"><i class="bi bi-envelope me-2"></i>
             info@themindgarden.com</span>
-        </div>
+            <div class="d-flex gap-2">
+                  <a href="https://twitter.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-twitter"></i></a>
+                  <a href="https://facebook.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-facebook"></i></a>
+                  <a href="https://youtube.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-youtube"></i></a>
+                  <a href="https://instagram.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-instagram"></i></a>
+                </div>
+              </div>
+        
         <!-- Right side: social icons -->
 <div>
   <span class="me-2">Follow Us:</span>
