--- a/projects.html
+++ b/projects.html
@@ -616,11 +616,11 @@
             <p><i
                 class="bi bi-envelope me-2"></i>info@themindgarden.com</p>
             <div class="d-flex gap-2">
-                  <a href="https://twitter.com" target="_blank" class="text-white me-3"><i class="bi bi-twitter"></i></a>
-                  <a href="https://facebook.com" target="_blank" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-                  <a href="https://youtube.com" target="_blank" class="text-white me-3"><i class="bi bi-youtube"></i></a>
-                  <a href="https://instagram.com" target="_blank" class="text-white"><i class="bi bi-instagram"></i></a>
-               </div>
+                  <a href="https://twitter.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-twitter"></i></a>
+                  <a href="https://facebook.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-facebook"></i></a>
+                  <a href="https://youtube.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-youtube"></i></a>
+                  <a href="https://instagram.com" class="btn btn-outline-light btn-sm rounded-circle"><i class="bi bi-instagram"></i></a>
+                </div>
           </div>
 
           <!-- Services -->
